Add basic layout in index.html && add a displayBoard  function that populates the DOM with a board && add some basic style to the board

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Battleship</title>
   </head>
-  <body></body>
+  <body>
+    <div id="nav">
+      <div id="player-one">
+        <div id="player-one-fleet"></div>
+      </div>
+      <div id="player-two">
+        <div id="player-two-fleet"></div>
+      </div>
+    </div>
+    <div id="display">
+      <div id="player-one-board"></div>
+      <div id="player-two-board"></div>
+    </div>
+  </body>
 </html>
